--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#form-errors {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #a21d4c;
+  text-align: center;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
